--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "electron-builder": "^25.0.5"
   },
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0"
   },
   "build": {
     "appId": "com.example.carsw",
